<resources>
    <string name="app_name">servicehotel</string>
    <string name="app_namePR">نسیم بهشت</string>
    <string name="msgErrorPayment">خطا در دسترسی به اطلاعات ،لطفا با پشتیبانی تماس بگیرید </string>
    <string name="countryEng">Country</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="msgErrorNoCityHotel">شهری با این اطلاعات وجود ندارد</string>
    <string name="msgErrorInternetConnection">خطا در ارتباط با اینترنت</string>
    <string name="msgErrorServer">خطا در دریافت اطلاعات</string>
    <string name="validateSelectRoutingRoom">کدوم اتاق رو انتخاب میکنید؟</string>
    <string name="msgErrorNoDomesticHotel">هتلی با این اطلاعات وجود ندارد</string>
    <string name="msgErrorRegister">خطا در ثبت اطلاعات ، لطفا با پشتیبانی تماس بگیرید</string>
    <string name="successGetTicket">مسافر محترم بلیط شما با موفقیت صادر گردید جهت دریافت بلیط روی دکمه زیر کلیک کنید </string>
    <string name="msgErrorRunningGetTicket"> متاسفانه در اجرای درخواست شما با مشکل مواجه شدیم،جهت صدور بلیط روی دریافت بلیط کلیک کنید.</string>
    <string name="finalPriceWithDiscount">مبلغ پرداخت با تخفیف:</string>
    <string name="validateSelectRoutingDomesticHotel">کدوم هتل را انتخاب میکنید</string>
    <string name="msgErrorNoHotelByFilter">هتلی با فیلتر های مورد نظر شما وجود ندارد</string>
    <string name="showAllHotels">نمایش همه هتل ها</string>
    <string name="searchingDomesticHotel">در حال جستجو هتل داخلی...</string>
    <string name="validateTelephone">تلفن ثابت را وارد کنید</string>
    <string name="validateEmail">ایمیل را با دقت وارد کنید</string>
    <string name="validateAcceptRule">چک مربوط به قوانین اینترنتی را بزنید</string>
    <string name="haveBedExtra">تخت اضافه دارد</string>
    <string name="bedExtra">تخت اضافه</string>
    <string name="email">پست الکترونیک</string>
    <string name="telephone">تلفن ثابت(کداستان)</string>
    <string name="mobile">موبایل</string>
    <string name="facilitiesRoom">امکانات اتاق</string>
    <string name="rulesHotel">قوانین هتل</string>
    <string name="featuresHotel">امکانات هتل</string>
    <string name="tryAgainSearch">دوباره سرچ کنم</string>
    <string name="capacityFlight">ظرفیت</string>
    <string name="bookingOnline">رزرو آنلاین</string>
    <string name="preBooking">در حال پیش رزرو</string>
    <string name="bookingOffline">رزرو تلفنی</string>
    <string name="reserve">رزرو</string>
    <string name="reserving">درحال رزرو...</string>
    <string name="noBedExtra">بدون تخت اضافه</string>
    <string name="msgErrorReserveHotel">خطا در رزرو هتل،مجدد تلاش کنید</string>
    <string name="validateFirstNamePersian">نام را فارسی وارد کنید</string>
    <string name="validateLastNamePersian"> نام خانوادگی را فارسی وارد کنید</string>
    <string name="validateMobile">شماره موبایل را وارد کنید</string>
    <string name="bookingInformation">اطلاعات رزرو</string>
    <string name="rulesInternetBuy">قبل از زدن دکمه ثبت قوانین رزرو اینترنتی را مطالعه نمودم و آن را قبول دارم.</string>
    <string name="cityEng">City</string>
    <string name="error">خطا</string>
    <string name="pleaseEnterDestination">Please enter country</string>
    <string name="pleaseEnterCity">Please enter city</string>
    <string name="toPlace">مقصد</string>
    <string name="checkInDate">تاریخ ورود</string>
    <string name="checkOutDate">تاریخ خروج</string>
    <string name="domesticHotel">هتل داخلی</string>
    <string name="hotelInternational">International Hotel</string>
    <string name="showCaseFromPlaceDestEng">You must first select the destination  path</string>
    <string name="noStars">معمولی</string>
    <string name="gettingInfo">درحال دریافت اطلاعات</string>
    <string name="bookingInProcessEng">Booking in process</string>
    <string name="msgErrorServerEng">Error in receiving information</string>
    <string name="msgErrorReserveHotelEng">Error booking hotel, retry</string>
    <string name="msgErrorInternetConnectionEng">Error internet connection</string>
    <string name="passengerEng">Passenger</string>
    <string name="checkInDateEng">Check-in Date</string>
    <string name="checkOutDateEng">Check-out Date</string>
    <string name="adultEng">Adult</string>
    <string name="msgErrorRunningGetTicketEng"> Sorry, we encountered a problem in your application, click to issue a ticket to receive a ticket.</string>
    <string name="gettingDetailHotelEng">Getting hotel details</string>
    <string name="showCaseRoomEng">Choose a room</string>
    <string name="msgErrorNoHotelInternationalEng">There are no hotels with the following specifications</string>
    <string name="tryAgainSearchEng">Try again search</string>
    <string name="errorEng">Error</string>
    <string name="tryAgainEng">Try Again</string>
    <string name="validateSelectRoutingHotelEng">Which hotel do you choose?</string>
    <string name="searchingHotelInternationalEng">Searching Hotel</string>
    <string name="showAllHotelsEng">Show all hotels</string>
    <string name="msgErrorNoFlightByFilterEng">There is no hotel with the filters you desire</string>
    <string name="childEng">Child</string>
    <string name="validateMobileEng">Please Check Mobile</string>
    <string name="validateEmailEng">Please Check Email</string>
    <string name="validateAcceptRuleEng">Accept Online Shop rules, Please</string>
    <string name="reserveEng">Booking</string>
    <string name="validateFirstNameEng">Please Enter FirstName</string>
    <string name="validateLastNameEng">Please Enter LastName</string>
    <string name="rulesInternetBuyEng">I agree the online shopping rules </string>
    <string name="titleRuleInternationalHotelEng">Dear passenger please pay attention to the following points</string>
    <string name="ruleInternationalHotel1Eng">Please check the information entered and make sure that it is correct for payment.</string>
    <string name="ruleInternationalHotel2Eng">please pay attention ,If you have entered the information below incorrectly or need to change it, you can use the Edit Information button.</string>
    <string name="neverMindEng">NeverMind</string>
    <string name="mobileEng">Mobile</string>
    <string name="sortAndFilter">مرتب سازی و فیلتر</string>
    <string name="sortBy">مرتب سازی لیست بر اساس ؟</string>
    <string name="hotelClass">کلاس هتل</string>
    <string name="checkInfoHotel">مسافر محترم:لطفا از قبل پرداخت ، از صحت اطلاعات هتل مطمئن شوید.</string>
    <string name="edit">ویرایش</string>
    <string name="buy">پرداخت</string>
    <string name="exit">خروج</string>
    <string name="getTicket">دریافت بلیط</string>
    <string name="hotelInformationEng">Hotel Information</string>
    <string name="successGetTicketEng">Dear passenger, your ticket was successfully issued. Click on the button below to receive the ticket </string>
    <string name="checkInfoHotelEng">Dear traveler: Please make sure you check the hotel information before paying.</string>
    <string name="passengerInformationEng">Passenger Information</string>
    <string name="buyEng">Payment</string>
    <string name="editEng">Edit</string>
    <string name="getTicketEng">Get Ticket</string>
    <string name="exitEng">Exit</string>
    <string name="noStarsEng">No stars</string>
    <string name="sortAndFilterEng">Sort and filter</string>
    <string name="sortByEng">Sort By  ?</string>
    <string name="hotelClassEng">Hotel class</string>
    <string name="offerEng">Offer</string>
    <string name="requestPassenger">Passenger Request </string>
    <string name="city">شهر</string>
    <string name="couNationality">تابعیت</string>
    <string name="room">اتاق</string>
    <string name="nationalCode">کد ملی</string>
    <string name="lNameFarsi">نام خانوادگی</string>
    <string name="mobilePhone">تلفن همراه</string>
    <string name="fNameFarsi">نام</string>
    <string name="descIfNeed">توضیحات(اختیاری)</string>
    <string name="showCaseFromPlaceCityEng">Select the City</string>
    <string name="showCaseCheckInEng">Select the date of arrival</string>
    <string name="firstNameEng">FirstName</string>
    <string name="lastNameEng">LastName</string>
    <string name="genderEng">Gender</string>
    <string name="secCode">کد امنیتی</string>
    <string name="emailEng">Email</string>
    <string name="pleaseToPlace">شهر مقصد را انتخاب کنید</string>
    <string name="showCaseCheckInDate">تاریخ ورود را وارد کنید</string>
    <string name="showCaseCheckOutDate">تاریخ خروج را وارد کنید</string>
    <string name="showCaseCheckOutEng">Choose departure date</string>
    <string name="showCaseNationalityEng">Enter your nationality</string>

    <string name="hotelContactInfoEng">Hotel Contact Info</string>
    <string name="fullFeaturesEng">Full features</string>
    <string name="fullFeaturesHotel">جزئیات هتل</string>

    <string name="moreEng">More</string>
    <string name="closeEng">Close</string>
    <string name="removeFilterEng">Reset</string>


    <array name="sortDomesticHotel">
        <item>کلاس هتل</item>
    </array>

    <array name="sortInternationalHotel">
        <item>Price</item>
        <item>Hotel Class(Rate)</item>
    </array>

    <string name="validateTypeFullNameEng">Type FullName</string>
    <string name="person">نفر</string>


    <string name="mr">Mr</string>
    <string name="mrs">Mrs</string>
    <string name="miss">Miss</string>
</resources>
