<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/includeSearchHotelInternational"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/styleConfigServiceItem"
    android:orientation="vertical"
    android:visibility="visible">


    <EditText
        android:id="@+id/edtFromPlaceDest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center"
        android:hint="@string/toPlace"
        android:lines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


    <EditText
        android:id="@+id/edtFromPlaceCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center"
        android:hint="@string/city"
        android:lines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


    <EditText
        android:id="@+id/edtCheckInDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center"
        android:hint="@string/checkInDate"
        android:lines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


    <EditText
        android:id="@+id/edtCheckOutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center"
        android:hint="@string/checkOutDate"
        android:lines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtNationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center"
        android:hint="@string/couNationality"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtSetRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center"
        android:hint="@string/room"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


</LinearLayout>