<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/includeSearchHotelDomestic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/styleConfigServiceItem"
    android:orientation="vertical"
    android:visibility="visible">


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtFromPlaceDestDomestic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:hint="@string/toPlace"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <EditText
        android:id="@+id/edtCheckInDateDomestic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:hint="@string/checkInDate"
        android:lines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <EditText
        android:id="@+id/edtCheckOutDateDomestic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:hint="@string/checkOutDate"
        android:lines="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


</LinearLayout>