<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtFname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:gravity="left"
                    android:hint="@string/firstNameEng"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusForward="@id/edtLName"
                    android:textIsSelectable="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:gravity="left"
                    android:hint="@string/lastNameEng"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:textIsSelectable="false" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtTypeGender"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="left"
                    android:hint="@string/genderEng"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/acceptEng"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/styleConfigMasterButtonTitle"
                app:backgroundTint="@color/styleConfigMasterButtonBackground" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/neverMindEng"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/styleConfigMasterButton2Title"
                app:backgroundTint="@color/styleConfigMasterButton2Background" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>